Added missing course to specialization EGI1

--- a/bin/scheduler.cfg
+++ b/bin/scheduler.cfg
@@ -129,6 +129,8 @@ add COURSE 'PV 5'                                        12             31 34
 add COURSE 'PV 6'                                        12             35
 add COURSE 'PV 7'                                        12             36 37
 
+add COURSE 'Basic Energy Systems'                        21             9 10
+
 # Add specializations
 # Names cannot contain forward- nor backslashes
 #                  '[name]'    [#numStudents] [courses...]
@@ -146,7 +148,7 @@ add SPECIALIZATION 'PDP1'      22             2 14 21 11
 
 add SPECIALIZATION 'FYS1'      19             5 7 17
 add SPECIALIZATION 'NANO1'     18             5 7 22
-add SPECIALIZATION 'EGI1'      64             5 16
+add SPECIALIZATION 'EGI1'      64             5 16 23
 
 add SPECIALIZATION 'GBE1'      91             3 15 16
 add SPECIALIZATION 'BAIT1'     29             3 12 19
