--- a/bin/scheduler.cfg
+++ b/bin/scheduler.cfg
@@ -3,75 +3,98 @@
 set WEEKS  16
 
 # Add teachers
-#           '[name]'            [offDay period1 period2...]
+#           '[name]'                    [offDay period1 period2...]
 # Audio-Visual Sketching
-add TEACHER 'Peter Skotte'
-add TEACHER 'Kasper Rodil'
+# Peter is not available on days 10 11 15 18 24 41 46 50 and partially available on days 14 23 25 32 34 53
+add TEACHER 'Peter Skotte'              10 1 1 11 1 1 15 1 1 18 1 1 24 1 1 41 1 1 46 1 1 50 1 1 14 0 1 23 0 1 25 0 1 32 1 0 53 0 1
+# Kasper is not available on days 4 16 18 19 20 35 42 43 54 and partially available on days 2 13 14 15 26 31 34 40
+add TEACHER 'Kasper Rodil'              4 1 1 16 1 1 18 1 1 19 1 1 20 1 1 35 1 1 42 1 1 43 1 1 54 1 1 2 0 1 13 1 0 13 1 0 14 1 0 15 0 1 26 1 0 31 0 1 34 0 1 40 0 1
 
 # Basic Chemistry
-add TEACHER 'Kim Larsen'
-add TEACHER 'Bent Roensholdt'
+# Kim is not available on days 6 11 17 24 30 39 43 50 57 62 65
+add TEACHER 'Kim Larsen'                6 1 1 11 1 1 17 1 1 24 1 1 30 1 1 39 1 1 43 1 1 50 1 1 57 1 1 62 1 1 65 1 1
+# Bent is not available on days 27 36 42 48 51 52 53 54 55 56 57 58 59 69 and partially available 10 16 28 30 45 50 60 72
+add TEACHER 'Bent Roensholdt'           27 1 1 36 1 1 42 1 1 48 1 1 51 1 1 52 1 1 53 1 1 54 1 1 55 1 1 56 1 1 57 1 1 58 1 1 59 1 1 69 1 1 10 0 1 16 1 0 28 0 1 45 0 1 50 1 0 60 0 1 72 0 1
+
 
 # Basic Electronics
-add TEACHER 'Ole Keil'
+# Ole is not available on days 15 16 17 18 19 35 36 37 38 39 40 and partially available 45 46 47 48 49 50
+add TEACHER 'Ole Keil'                  15 1 1 16 1 1 17 1 1 18 1 1 19 1 1 35 1 1 36 1 1 37 1 1 38 1 1 39 1 1 40 1 1 45 1 0 46 1 0 47 1 0 48 0 1 49 0 1 50 1 0
 
 # Basic Programming
-add TEACHER 'Rikke Gade'
-add TEACHER 'Anders Bruun'
+# Rikke is not available in week 10 and 15
+add TEACHER 'Rikke Gade'                45 1 1 46 1 1 47 1 1 48 1 1 49 1 1 70 1 1 71 1 1 72 1 1 73 1 1 74 1 1
+# Anders is not available in weeks 1 and partially available in week 2
+add TEACHER 'Anders Bruun'              0 1 1 1 1 1 2 1 1 3 1 1 4 1 1 5 1 0 6 1 0 7 0 1 8 0 1 9 0 1
 
 # Calculus
-# Horia is not available in the third week
-add TEACHER 'Horia Cornean' 10 1 1 11 1 1 12 1 1 13 1 1 14 1 1
-# Hans is not available in week 8
-add TEACHER 'Hans Olav Geil' 35 1 1 36 1 1 37 1 1 38 1 1 39 1 1
+# Horia is not available in the third week and days 36 38
+add TEACHER 'Horia Cornean'             10 1 1 11 1 1 12 1 1 13 1 1 14 1 1 36 1 1 38 1 1
+# Hans is not available in week 8 and days 60 63 66 69
+add TEACHER 'Hans Olav Geil'            35 1 1 36 1 1 37 1 1 38 1 1 39 1 1 60 1 1 66 1 1 69 1 1
 
 # Electronic Learning
-add TEACHER 'Esben Skovsen'
-add TEACHER 'Carsten Bojesen'
+# Esben is not available in weeks 4 9 and partially available in week 6
+add TEACHER 'Esben Skovsen'             15 1 1 16 1 1 17 1 1 18 1 1 19 1 1 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1 25 0 1 26 0 1 27 0 1 28 1 0 29 1 0
+# Carsten is not available in week 6 and partially available in weeks 13 14
+add TEACHER 'Carsten Bojesen'           25 1 1 26 1 1 27 1 1 28 1 1 29 1 1 60 0 1 61 1 0 62 1 0 63 1 0 64 0 1 65 0 1 66 1 0 67 0 1 68 1 0 69 1 0
 
 # Imperative Programming
-# Kurt Noermark is not available in the second week
-add TEACHER 'Kurt Normark' 5 1 1 6 1 1 7 1 1 8 1 1 9 1 1
-add TEACHER 'Jens Dalsgaard Nielsen'
+# Kurt Noermark is not available in the second and eighth week
+add TEACHER 'Kurt Normark'              5 1 1 6 1 1 7 1 1 8 1 1 9 1 1 35 1 1 36 1 1 37 1 1 38 1 1 39 1 1
+# Jens is not available in weeks 6 7
+add TEACHER 'Jens Dalsgaard Nielsen'    25 1 1 26 1 1 27 1 1 28 1 1 29 1 1 30 1 1 31 1 1 32 1 1 33 1 1 34 1 1
 
 # Introduction to Mathematic Methods
-add TEACHER 'Esben Hoeg'
-add TEACHER 'Emil Ottosen'
+# Esben is not available in weeks 7 10
+add TEACHER 'Esben Hoeg'                30 1 1 31 1 1 32 1 1 33 1 1 34 1 1 25 1 1 26 1 1 27 1 1 28 1 1 29 1 1
+# Emil is not available in weeks 2 3 and partially available in week 5
+add TEACHER 'Emil Ottosen'              5 1 1 6 1 1 7 1 1 8 1 1 9 1 1 10 1 1 11 1 1 12 1 1 13 1 1 14 1 1 35 1 0 36 1 0 37 1 1 38 1 0 39 0 1
 
 # Introduction to Product and Design Psychology
-add TEACHER 'Nikita Kharlamov'
-add TEACHER 'Tina oevad Pedersen'
+# Nikita is not available in weeks 2 6 13
+add TEACHER 'Nikita Kharlamov'          5 1 1 6 1 1 7 1 1 8 1 1 9 1 1 25 1 1 26 1 1 27 1 1 28 1 1 29 1 1 60 1 1 61 1 1 62 1 1 63 1 1 64 1 1
+# Tina is not available in weeks 6 12 and partially available in week 8
+add TEACHER 'Tina oevad Pedersen'       25 1 1 26 1 1 27 1 1 28 1 1 29 1 1 55 1 1 56 1 1 57 1 1 58 1 1 59 1 1 35 0 1 36 1 0 37 0 1 38 1 0 39 1 0
 add TEACHER 'Rodrigo Ordonez'
 
 # IT-Systems
-add TEACHER 'Jesper Kjeldskov'
-add TEACHER 'Tem Frank Andersen'
+# Jesper is not available in weeks 12 14
+add TEACHER 'Jesper Kjeldskov'          55 1 1 56 1 1 57 1 1 58 1 1 59 1 1 65 1 1 66 1 1 67 1 1 68 1 1 69 1 1
+# Tem is not available in weeks 2 7 13
+add TEACHER 'Tem Frank Andersen'        5 1 1 6 1 1 7 1 1 8 1 1 9 1 1 30 1 1 31 1 1 32 1 1 33 1 1 34 1 1 60 1 1 61 1 1 62 1 1 63 1 1 64 1 1
 
 # Linear Algebra
 add TEACHER 'Lisbeth Fajstrup'
-# Jacob Broe is not available the first two days 
-add TEACHER 'Jacob Broe' 0 1 1 1 1 1
-add TEACHER 'Nikolaj Hess-Nielsen'
-add TEACHER 'Diego Ruano'
+# Jacob Broe is not available the first two days and week 9
+add TEACHER 'Jacob Broe'                0 1 1 1 1 1 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1
+# Nikolaj is not available in weeks 4 9 12
+add TEACHER 'Nikolaj Hess-Nielsen'      15 1 1 16 1 1 17 1 1 18 1 1 19 1 1 40 1 1 42 1 1 43 1 1 44 1 1 45 1 1 55 1 1 56 1 1 57 1 1 58 1 1 59 1 1 60 1 1
+# Diego is not available in weeks 5 16
+add TEACHER 'Diego Ruano'               20 1 1 21 1 1 22 1 1 23 1 1 24 1 1 75 1 1 76 1 1 77 1 1 78 1 1 79 1 1
 
 # Operations Management and Organizations
-add TEACHER 'Harry Boer'
-add TEACHER 'Sami Farooq'
-add TEACHER 'Rikke Vestergaard Matthiesen'
+# Harry is not available in weeks 2 7 and partially available in week 12
+add TEACHER 'Harry Boer'                5 1 1 6 1 1 7 1 1 8 1 1 9 1 1 30 1 1 31 1 1 32 1 1 33 1 1 34 1 1 55 0 1 56 0 1 57 1 0 58 0 1 59 0 1 60 1 0
+# Sami is not available in week 9 and partially available in weeks 4 13
+add TEACHER 'Sami Farooq'               40 1 1 41 1 1 42 1 1 43 1 1 44 1 1 15 1 0 16 0 1 17 0 1 18 1 0 19 0 1 60 1 0 61 1 0 62 1 0 63 1 0 64 1 0
+# Rikke is not available in week 3 and partially available in weeks 6 9 14
+add TEACHER 'Rikke Vestergaard Matthiesen' 10 1 1 11 1 1 12 1 1 13 1 1 14 1 1 25 1 0 26 0 1 27 0 1 28 0 1 29 1 0 40 0 1 41 0 1 42 0 1 43 0 1 44 0 1 65 1 0 66 0 1 67 1 0 68 0 1 69 0 1
 
 # PV
-add TEACHER 'Claus Monrad Spliid'
-add TEACHER 'Karl Sperling'
-add TEACHER 'Lars Botin'
-add TEACHER 'Bettina Dahl Soendergaard'
-# Lars is only available the first lecture in the first week
-add TEACHER 'Lars Peter Jensen' 0 0 1 1 0 1 2 0 1 3 0 1 4 0 1
-add TEACHER 'Aida Guerra'
-add TEACHER 'Jette Holgaard'
-add TEACHER 'Lone Stub Pedersen'
-add TEACHER 'Mette Mosgaard'
-add TEACHER 'Troels Hegland'
-add TEACHER 'Pia Boegelund'
+# All PV teachers have a course in weeks 9 and 10
+add TEACHER 'Claus Monrad Spliid' 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1
+add TEACHER 'Karl Sperling' 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1
+add TEACHER 'Lars Botin' 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1
+add TEACHER 'Bettina Dahl Soendergaard' 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1
+# Lars is only available the first lecture in the first week and on course in week 9
+add TEACHER 'Lars Peter Jensen' 0 0 1 1 0 1 2 0 1 3 0 1 4 0 1 40 1 1 41 1 1 42 1 1 43 1 1 44 1 1
+add TEACHER 'Aida Guerra' 45 1 1 46 1 1 47 1 1 48 1 1 49 1 1
+add TEACHER 'Jette Holgaard' 45 1 1 46 1 1 47 1 1 48 1 1 49 1 1
+add TEACHER 'Lone Stub Pedersen' 45 1 1 46 1 1 47 1 1 48 1 1 49 1 1
+add TEACHER 'Mette Mosgaard' 45 1 1 46 1 1 47 1 1 48 1 1 49 1 1
+add TEACHER 'Troels Hegland' 45 1 1 46 1 1 47 1 1 48 1 1 49 1 1
+add TEACHER 'Pia Boegelund' 45 1 1 46 1 1 47 1 1 48 1 1 49 1 1
 
 # Add rooms
 #        '[name]'       [#numSeats]
