fixed bug and added test

--- a/bin/test.cfg
+++ b/bin/test.cfg
@@ -2,7 +2,9 @@
 # which our tests will be used on.
 set WEEKS  1
 
-add ROOM 'Dummy Room' 50
+add ROOM 'Perfect Room' 50
+add ROOM 'Small Room'   10
+add ROOM 'Big Room'     500
 
 # Teacher is unavailable on day 2 (Wednesday) for testing purposes
 add TEACHER 'Dummy Teacher' 2 1 1
