added max week for courses

--- a/bin/scheduler.cfg
+++ b/bin/scheduler.cfg
@@ -116,43 +116,43 @@ add ROOM 'A206'         12
 
 # Add courses
 #          '[name]'                                      [#numLectures] [teachers...]
-add COURSE 'Audio-Visual Sketching 1'                    16             0 1
+add COURSE 'Audio-Visual Sketching 1'                    16 0             0 1
 
-add COURSE 'Basic Chemistry 1'                           17             2 3
+add COURSE 'Basic Chemistry 1'                           17 0           2 3
 
-add COURSE 'Basic Programming 1'                         14             5
-add COURSE 'Basic Programming 2'                         14             6
+add COURSE 'Basic Programming 1'                         14 0           5
+add COURSE 'Basic Programming 2'                         14 0           6
 
-add COURSE 'Basic Electronics 1'                         15             4
+add COURSE 'Basic Electronics 1'                         15 0           4
 
-add COURSE 'Calculus 1'                                  22             7
-add COURSE 'Calculus 2'                                  22             8
+add COURSE 'Calculus 1'                                  22 0           7
+add COURSE 'Calculus 2'                                  22 0           8
 
-add COURSE 'Electric Learning 1'                         24             9
+add COURSE 'Electric Learning 1'                         24 0           9
 
-add COURSE 'Imperative Programming 1'                    13             11
-add COURSE 'Imperative Programming 2'                    13             12
+add COURSE 'Imperative Programming 1'                    13 0           11
+add COURSE 'Imperative Programming 2'                    13 0           12
 
-add COURSE 'Introduction to Mathematic Methods'          16             13 14
+add COURSE 'Introduction to Mathematic Methods'          16 0           13 14
 
-add COURSE 'Introduction to Product and Design Psychology' 17           15 16 17
+add COURSE 'Introduction to Product and Design Psychology' 17 0          15 16 17
 
-add COURSE 'IT-Systems: Cultural Context 1'              14             18 19
+add COURSE 'IT-Systems: Cultural Context 1'              14 0         18 19
 
-add COURSE 'Linear Algebra 1'                            22             21
-add COURSE 'Linear Algebra 2'                            22             22
+add COURSE 'Linear Algebra 1'                            22 0           21
+add COURSE 'Linear Algebra 2'                            22 0           22
 
-add COURSE 'Operations Management and Organizations'     15             24 25 26
+add COURSE 'Operations Management and Organizations'     15 0           24 25 26
 
-add COURSE 'PV 1'                                        12             27 28
-add COURSE 'PV 2'                                        12             29 30
-add COURSE 'PV 3'                                        12             31 32 33
-add COURSE 'PV 4'                                        12             31 33 34
-add COURSE 'PV 5'                                        12             31 34
-add COURSE 'PV 6'                                        12             35
-add COURSE 'PV 7'                                        12             36 37
+add COURSE 'PV 1'                                        12 8           27 28
+add COURSE 'PV 2'                                        12 8           29 30
+add COURSE 'PV 3'                                        12 8           31 32 33
+add COURSE 'PV 4'                                        12 8           31 33 34
+add COURSE 'PV 5'                                        12 8           31 34
+add COURSE 'PV 6'                                        12 8           35
+add COURSE 'PV 7'                                        12 8           36 37
 
-add COURSE 'Basic Energy Systems'                        21             9 10
+add COURSE 'Basic Energy Systems'                        21 0           9 10
 
 # Add specializations
 # Names cannot contain forward- nor backslashes
